--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Werkstuk versie 1.log
 Werkstuk versie 1.synctex.gz
 Werkstuk versie 1.pdf
 Werkstuk versie 1.blg
+Werkstuk versie 2.synctex.gz
+Werkstuk versie 2.pdf
+Werkstuk versie 2.log
+Werkstuk versie 2.aux
