--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Werkstuk versie 2.synctex.gz
 Werkstuk versie 2.pdf
 Werkstuk versie 2.log
 Werkstuk versie 2.aux
+Werkstuk versie 2.blg
+Werkstuk versie 2.bbl
