update Lotte af

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Werkstuk versie 2.log
 Werkstuk versie 2.pdf
 Werkstuk versie 2.synctex.gz
 Werkstuk versie 2_Suus af.tex
+Werkstuk versie 2_Lotte.tex
