--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ Werkstuk versie 2.pdf
 Werkstuk versie 2.synctex.gz
 Werkstuk versie 2_Suus af.tex
 Werkstuk versie 2_Lotte.tex
+Werkstuk versie 3.bbl
+Werkstuk versie 3.aux
+Werkstuk versie 3.log
+Werkstuk versie 3.blg
+Werkstuk versie 3.pdf
+Werkstuk versie 3.synctex.gz
